# hw3PartC

./: CMakeLists.txt  Character.cpp  Character.h  EmptySlot.cpp  EmptySlot.h  Exception.h  Exceptions.h  Game.cpp  Game.h  Matrix.h  Medic.cpp  Medic.h  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h  TemArray.h  main.cpp
partB/: Matrix.h
